# python-discovery

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  README.md  pyproject.toml  tox.toml
.github/workflows/: check.yaml  check.yml  prepare-release.yaml  release.yaml  release.yml
docs/: changelog.rst  conf.py  explanation.rst  index.rst
docs/_static/: custom.css
docs/changelog/: 59.bugfix.rst  65.bugfix.rst  65.feature.rst  73.bugfix.rst  80.feature.rst  84.bugfix.rst  86.bugfix.rst  92.packaging.rst  96.bugfix.rst
docs/how-to/: standalone-usage.rst
docs/reference/: api.rst  environment-variables.rst
docs/tutorial/: getting-started.rst
src/python_discovery/: __init__.py  _cache.py  _discovery.py  _py_info.py  _py_spec.py  _specifier.py
tasks/: release.py
tests/: conftest.py  test_cache.py  test_cached_py_info.py  test_discovery.py  test_discovery_extra.py  test_iter_interpreters.py  test_py_info_extra.py  test_py_spec.py  test_py_spec_extra.py  test_specifier.py
tests/py_info/: test_py_info.py  test_py_info_exe_based_of.py
tests/windows/: conftest.py  test_windows.py  test_windows_pep514.py  winreg_mock_values.py
